# ficsit-math

./: .gitignore  Cargo.toml  README.md
src/: classes.rs  main.rs
src/classes/: raw.rs
