[package]
name = "ficsit-math"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-where = "1.2.7"
dotenvy = "0.15.7"
encoding_rs = "0.8.34"
num-traits = "0.2.19"
num-rational = { version = "0.4.2", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
